--- a/resume.tex
+++ b/resume.tex
@@ -86,7 +86,7 @@
 \begin{minipage}[t]{0.5\textwidth}
     \vspace{-24pt}
     {\Huge\scshape{Melissa Ross}}\\
-    Boston, MA
+    Cambridge, MA
 \end{minipage}
 \begin{minipage}[t]{0.48\textwidth}
     \flushright 
